# LLAssembly

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
benchmark/: results.json  run_benchmark.py  scenarios.py
llassembly/: __init__.py  asm_emulator.py  langchain.py  langgraph.py  langgraph_plan.py  mcp_server.py  prompts.py
llassembly/prompts_md/: base.md  base_compact.md
tests/: conftest.py  test_asm_emulator.py  test_langchain.py  test_langgraph.py  test_turtle.py
tests/use_cases/npc_in_game_unit/: test_unit_controls.py
tests/use_cases/npc_in_game_unit/cassettes/test_unit_controls/: test_unit_condition_stmt.yaml  test_unit_conditional_loop.yaml  test_unit_moves.yaml
tests/use_cases/npc_in_game_unit/fixtures/: unit_controls.py
